--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html><!--HTML5 구성이다! --><html lang="en"><!--HTML을 시작 --><!--언어가 한국어면 kr--><!-- div span: 레이어의 구성! --><head><title>THIS TAG IS FOR THE TITLE</title>
-  <!-- HTML의 정보를 담는 부분의 시작 -->
-    <script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/addons/p5.sound.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
-
+    <meta charset="utf-8" />
+    <title>TITLE TEST</title>
   </head>
   <body>
-    <main>
-    </main>
     <script src="sketch.js"></script>
-  
-
-</body></html>
+  </body>
+</html>
