--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
     <meta charset="utf-8" />
     <title>TITLE TEST</title>
   </head>
   <body>
-    <script src="sketch.js"></script>
+    <div class="dropdown">
+      <button class="dropbutton">MENU</button>
+      <div class="dropdown-content">
+        <a href="./dir/link1/index.html">p5.js sketches</a>
+        <a href="#">three.js sketches</a>
+        <a href="#">about</a>
+      </div>
+    </div>
+    
+    <div style="width:100%; text-align: center;">
+      <a href="./dir/thumb1link/index.html">
+        <img src="./assets/images/thumb1.png" style="width:25%">
+      </a>
+    </div>
+    <div style="width:100%; text-align: center;">
+      <a href="./dir/thumb2link/index.html">
+        <img src="./assets/images/thumb2.png" style="width:25%">
+      </a>
+    </div>
+    <div style="width:100%; text-align: center;">
+      <a href="./dir/thumb3link/index.html">
+        <img src="./assets/images/thumb3.png" style="width:25%">
+      </a>
+    </div>
+    
   </body>
 </html>
