--- a/index.html
+++ b/index.html
@@ -3,31 +3,33 @@
   <head>
     <link rel="stylesheet" type="text/css" href="./style.css">
     <meta charset="utf-8" />
-    <title>TITLE TEST</title>
+    <title>DWKL SKETCHES</title>
   </head>
   <body>
     <div class="dropdown">
       <button class="dropbutton">MENU</button>
       <div class="dropdown-content">
-        <a href="./dir/link1/index.html">p5.js sketches</a>
+        <a href="#">p5.js sketches</a>
         <a href="#">three.js sketches</a>
         <a href="#">about</a>
       </div>
     </div>
-    
+
+    <br>
+    <br>
     <div style="width:100%; text-align: center;">
       <a href="./dir/thumb1link/index.html">
-        <img src="./assets/images/thumb1.png" style="width:25%">
+        <img src="./assets/images/thumb1.png" style="width:25%" class="zoom">
       </a>
     </div>
     <div style="width:100%; text-align: center;">
       <a href="./dir/thumb2link/index.html">
-        <img src="./assets/images/thumb2.png" style="width:25%">
+        <img src="./assets/images/thumb2.png" style="width:25%" class="zoom">
       </a>
     </div>
     <div style="width:100%; text-align: center;">
       <a href="./dir/thumb3link/index.html">
-        <img src="./assets/images/thumb3.png" style="width:25%">
+        <img src="./assets/images/thumb3.png" style="width:25%" class="zoom">
       </a>
     </div>
     
