changed text content

--- a/dir/thumb2link/index.html
+++ b/dir/thumb2link/index.html
@@ -19,6 +19,8 @@
 
     <script src="sketch.js"></script>
     
-    
+    <p style="text-align: center;">
+      <br>click and drag mouse to select tiles to shuffle. 
+    </p>
   </body>
 </html>
