added l systems with flow

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         <img src="./assets/images/thumb3.png" style="width:25%" class="zoom">
       </a>
     </div>
+    <div style="width:100%; text-align: center;">
+      <a href="./dir/thumb4link/index.html">
+        <img src="./assets/images/thumb4.png" style="width:25%" class="zoom">
+      </a>
+    </div>
     
   </body>
 </html>
