--- a/dir/thumb4link/index.html
+++ b/dir/thumb4link/index.html
@@ -13,8 +13,8 @@
     <div class="dropdown">
       <button class="dropbutton">MENU</button>
       <div class="dropdown-content">
-        <a href="../../">p5.js sketches</a>
-        <a href="#">three.js sketches</a>
+        <a href="../../index.html">p5.js projects</a>
+        <a href="../p5assignments/">p5.js assignments</a>
         <a href="#">about</a>
       </div>
     </div>
